third_party/move/move-compiler-v2/tests/checking/typing/recursive_local.exp

Diagnostics:
error: unable to infer type due to cyclic type constraints (try annotating the type)
  ┌─ tests/checking/typing/recursive_local.move:5:9
  │
5 │         x = (x, 0);
  │         ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/recursive_local.move:5:19
  │
5 │         x = (x, 0);
  │                   ^
